--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="I am 19 years olds and will be majoring in Phychology">
+  <meta name="author" content="862444597">
 
-  <title>John Doe - Business Administration</title>
+  <title>Laisha Galicia - Phychology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Laisha Galcia</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/LaishaGalicia.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Laisha Galicia
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Psychology📚</div>
+        <p class="lead mb-4">Hi, My name is Laisha Galicia, I attended at University of California, Riverside. I major in psychology. I got my bachelor degree and also I push myself to get my master degree.  I choose this major because its a dream of mine, with my degree I choose to become a therapist.  I want to be able to help others around the world who have any type of issues and need help and opening up to others. My professional experience has been going so amazing, I have come such a long way , I have succeeded in life and accomplish goals I had for myself even before I went to the professional world. I've had people who have thank me for helping me and I feel so proud of myself for being able to accomplish that. I come prepared to change behavior in a good way, focus on their relationship with other people and also with themselves.   <br><br>
 
-        Enter bio here<br><br>
+        In my Hispanic household , I'm a first generation. Being the first has become so challenging especially because you need to learn on your own and figure the future on your own. Since I do come from strict hispanic household, I notice that they will think going to therapy for help was known to be crazy. I disagree in opinions like these, I believe therapy is a good way to help yourself, open up to others, and also understand yourself.. Some people suffer from different things and its good to have someone you can open up and talk to. It can feel like a safe place. Since I had my degree I had change my family opinion and they agree with therapy is good for anyone. <br><br>
 
-        Enter bio here
+        With my degree, I have so many goals I still wanna accomplish. I have been able to help so many people with any problems. I been able to make them feel safe and everything they want to open up to me will be kept between us two only. To me its so important to not only be their therapist but also be there friend. I want to be there through their path of therapy. I want to make sure everyone feels okay. My biggest goal is make postive changes. Anybody is welcome to come includimg people who had a taranatize experience and have an addiction. I want to be able to make good habits for them, focus on their wellness and personal growth. A accomplish that I have made so far is have people take good care of them seleves where they can feel mentally and pysically okay. I am here to talk what their life goals are and how they can accomplish it. Decision making is a important thing to do if you end up doing a bad decision not only can it affect you but also others around you. Its so important for me to help them just think about good decision making in life. Anything in this world is possible. I am here for that. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.psychologytoday.com//">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/LaishaGalicia">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.coolmathgames.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:laishagalicia@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Helper</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Community</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Babysit whoever needed it <br> 
+              • Took care of neighbors dogs <br>
+              • Experinece to be community leader<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2019 - June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Yougurtland</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible to help customers <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2023 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Softball</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">School </a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Captain<br>
+            • Taught New Players<br>
+            •Team player<br>
+            • Leader <br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2020 - May 2023</span>
           </div>
         </div>
 
@@ -152,33 +152,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Masters of Psychology</div>
+            <div>Chass college/Psychology </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2027 - May 2029</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Bachelor Degree</div>
+            <div>Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">September 2023-May 2027</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Psychology Administration</div>
+            <div>Therapist</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2028-December 2029</span>
           </div>
         </div>
 
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+          <img src="img/dogwalking.jpeg" width="500px">
+          <img src="img/yogurt.jpeg" width="500px"><br>
+          <img src="img/Yougurtland.jpeg" width="500px">
+          <img src="img/softball.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +202,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Laisha Galicia</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
